--- a/src/app/component/visit-summary/patient-interaction/patient-interaction.component.html
+++ b/src/app/component/visit-summary/patient-interaction/patient-interaction.component.html
@@ -21,7 +21,8 @@
         <br/>
     </div>
     <div *ngFor="let msg of msg">
-        <div [@moveInLeft] class="alert alert-primary">{{msg}}
+        <div [@moveInLeft] class="alert alert-primary">
+            <div class="doctor-value">{{msg}}</div>
             <i (click)="delete(msg.uuid)" class="material-icons float-right" style="color:rgb(235, 30, 30);cursor: pointer;">delete</i>
         </div>
     </div>
